--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "emailjs-com": "^2.4.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-toast-notification": "^0.4.1",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
