--- a/package.json
+++ b/package.json
@@ -7,13 +7,12 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "predeploy": "npm build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "core-js": "^3.6.5",
     "emailjs-com": "^2.4.1",
-    "gh-pages": "^3.1.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vue-toast-notification": "^0.4.1",
